--- a/style.css
+++ b/style.css
@@ -35,3 +35,64 @@ body{
     color: white;
     font-weight: 600;
 }
+
+.donate-today{
+    text-align: center;
+    padding: 100px 350px 50px 350px ;
+}
+
+.donate-today h1{
+    font-size: 45px;
+}
+
+.donate-amount{
+
+    display: flex;
+    width: 15%;
+}
+
+.flex-container {
+    padding: 0;
+    margin-bottom: 50px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
+  row {
+    width: 100%;
+  }
+
+  .flex-item {
+    padding: 5px;
+    margin: 10px;
+    color: gray;
+    font-weight: bolder;
+    font-size: 30px;
+    text-align: center;
+  }
+
+ .dif{
+    border: 2px solid #FF5959;
+    padding: 20px 15px 20px 15px;
+    color: #FF5959;
+ }
+
+ .custom-amount{
+
+    text-align: center;
+    margin-bottom: 50px;
+
+ }
+
+ input {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    width: 400px;
+    text-align: center;
+    font-size: 20px;
+  }
